# flexo-viewer

./: .gitignore  CMakeLists.txt  FindCCL.cmake  FindFitsio.cmake  FindQwt.cmake  README.md  flexo_viewer.qrc  main.cpp
src/: data_delegate.cpp  data_delegate.h  data_model.cpp  data_model.h  data_plot_model.cpp  data_plot_model.h  data_plot_widget.cpp  data_plot_widget.h  data_seaker.cpp  data_seaker.h  fits_model.cpp  fits_model.h  flexo_table_view.cpp  flexo_table_view.h  flexo_viewer.cpp  flexo_viewer.cpp.orig  flexo_viewer.h  gnu_ploter.cpp  gnu_ploter.h  gnuplot_console.cpp  gnuplot_console.h  headers_model.cpp  headers_model.h  image_dialog.cpp  image_dialog.h  image_model.cpp  image_model.h  interval_combo_model.cpp  interval_combo_model.h  new_curve_widget.cpp  new_curve_widget.h  new_range_widget.cpp  new_range_widget.h  plot_dialog.cpp  plot_dialog.h  ploter.cpp  ploter.h  search_widget.cpp  search_widget.h  tab_panel.cpp  (+3 more)
